wip, tox tests not yet running

--- a/tox.ini
+++ b/tox.ini
@@ -14,6 +14,7 @@ commands = python -m pip install --upgrade pip
 deps =
     -rrequirements.txt
     pytest
+    pytest_mock
 commands = python -m pytest --basetemp={envtmpdir} {posargs}
 
 [testenv:linting]
@@ -23,7 +24,7 @@ deps =
     pylint
     # add your fixtures like e.g. pytest_datafiles here
 commands =
-    pylint mymodule.py
+    pylint src/ahb_condition_expression_parser
     # add single files (ending with .py) or packages here
 
 [testenv:coverage]
