--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@ envlist =
      linting
      coverage
 skip_missing_interpreters = True
-skipsdist = True
+isolated_build = True
 
 [testenv]
 commands = python -m pip install --upgrade pip
