🔧 Use develop mode for coverage environment
Install the current package in development mode with “setup.py develop” instead of installing from the sdist package.

Source:
https://tox.readthedocs.io/en/latest/config.html#conf-usedevelop

--- a/tox.ini
+++ b/tox.ini
@@ -29,6 +29,7 @@ commands =
 
 [testenv:coverage]
 # the coverage environment is called by the Github Action that runs the coverage measurement
+usedevelop = True
 deps =
     {[testenv:tests]deps}
     coverage
