--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,5 @@ inject==4.3.1
     # via -r requirements.in
 lark==0.11.3
     # via -r requirements.in
+marshmallow==3.13.0
+    # via -r requirements.in
