--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@ envlist =
      linting
      coverage
 skip_missing_interpreters = True
-skipsdist = True
+isolated_build = True
 
 [testenv]
 commands = python -m pip install --upgrade pip
@@ -14,6 +14,7 @@ commands = python -m pip install --upgrade pip
 deps =
     -rrequirements.txt
     pytest
+    pytest_mock
 commands = python -m pytest --basetemp={envtmpdir} {posargs}
 
 [testenv:linting]
@@ -23,18 +24,19 @@ deps =
     pylint
     # add your fixtures like e.g. pytest_datafiles here
 commands =
-    pylint mymodule.py
+    pylint src/ahbcep
     # add single files (ending with .py) or packages here
 
 [testenv:coverage]
 # the coverage environment is called by the Github Action that runs the coverage measurement
+usedevelop = True
 deps =
     {[testenv:tests]deps}
     coverage
 commands =
     coverage run -m pytest --basetemp={envtmpdir} {posargs}
     coverage html --omit .tox/*,unittests/*
-    coverage report --fail-under 80 --omit .tox/*,unittests/*
+    coverage report --fail-under 95 --omit .tox/*,unittests/*
 
 [testenv:dev]
 # the dev environment contains everything you need to start developing on your local machine.
