--- a/tox.ini
+++ b/tox.ini
@@ -24,7 +24,7 @@ deps =
     pylint
     # add your fixtures like e.g. pytest_datafiles here
 commands =
-    pylint src/ahbcep
+    pylint src/ahbicht
     # add single files (ending with .py) or packages here
 
 [testenv:coverage]
