--- a/tox.ini
+++ b/tox.ini
@@ -53,3 +53,13 @@ commands =
     pip-compile requirements.in
     pip install -r requirements.txt
     pre-commit install
+
+[testenv:test_packaging]
+basepython = python3.8
+skip_install = true
+deps =
+    build
+    twine
+commands =
+    python -m build
+    twine check dist/*
