🔧 Use develop mode in tests environment

--- a/tox.ini
+++ b/tox.ini
@@ -11,6 +11,7 @@ commands = python -m pip install --upgrade pip
 
 [testenv:tests]
 # the tests environment is called by the Github action that runs the unit tests
+usedevelop = True
 deps =
     -rrequirements.txt
     pytest
