📦 Put ahbicht into a package (#7)
* ℹ Fix dependency attrS

* 🔧 Update excluding directory to unittests

* 🔧 Update setup.cfg for ahbicht

* 🔧 Update pyproject.toml

* 🔥 Delete setup.py cause it's not needed anymore

setup.cfg is enough for packaging

* 🔨 Add test_packaging environment

* 📝 Add some info about versioning. Will be changed to git tags in future

* 🔧 Try python 3.8 to get unittest to work

* 🔧 Return to python39

* 🔧 Use develop mode in tests environment

* 🔥 Remove hard coded python version in test_packaging

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,27 +1,30 @@
 [metadata]
-url = https://github.com/Hochfrequenz/ahb_condition_expression_parser
-project_urls =
-    Documentation = https://bo4e-python.readthedocs.io/en/latest/
-    Code = https://github.com/Hochfrequenz/ahb_condition_expression_parser
-    Issue tracker = https://github.com/Hochfrequenz/ahb_condition_expression_parser/issues
-license = mit
+name = ahbicht
+version = 0.0.1
 author = Annika Schlögl
 author_email = annika.schloegl@hochfrequenz.de
 description = Python Library to parse AHB expressions.
 long_description = file: README.rst
 long_description_content_type = text/x-rst; charset=UTF-8
-platforms = any
+url = https://github.com/Hochfrequenz/ahbicht
+project_urls =
+    Documentation = https://ahbicht.readthedocs.io/en/latest/
+    Code = https://github.com/Hochfrequenz/ahbicht/
+    Bug tracker = https://github.com/Hochfrequenz/ahbicht/issues
 classifiers =
     Development Status :: 4 - Beta
     Intended Audience :: Developers
-    Operating System :: OS Independent
     Programming Language :: Python
     Programming Language :: Python :: 3.8
+    Operating System :: OS Independent
+license = mit
+platforms = any
 
 [options]
-zip_safe = False
+package_dir =
+    = src
 packages = find:
-package_dir = = src
+zip_safe = False
 include_package_data = True
 python_requires = >=3.8
 install_requires =
@@ -33,4 +36,4 @@ install_requires =
 [options.packages.find]
 where = src
 exclude =
-    tests
+    unittests
