--- a/tox.ini
+++ b/tox.ini
@@ -11,6 +11,7 @@ commands = python -m pip install --upgrade pip
 
 [testenv:tests]
 # the tests environment is called by the Github action that runs the unit tests
+usedevelop = True
 deps =
     -rrequirements.txt
     pytest
@@ -53,3 +54,12 @@ commands =
     pip-compile requirements.in
     pip install -r requirements.txt
     pre-commit install
+
+[testenv:test_packaging]
+skip_install = true
+deps =
+    build
+    twine
+commands =
+    python -m build
+    twine check dist/*
