🔧 Add coverage.xml output and save html and xml reporsts in coverage/

--- a/tox.ini
+++ b/tox.ini
@@ -36,7 +36,8 @@ deps =
     coverage
 commands =
     coverage run -m pytest --basetemp={envtmpdir} {posargs}
-    coverage html --omit .tox/*,unittests/*
+    coverage html -d coverage/html --omit .tox/*,unittests/*
+    coverage xml -o ./coverage/coverage.xml --omit .tox/*,unittests/*
     coverage report --fail-under 95 --omit .tox/*,unittests/*
 
 [testenv:dev]
