--- a/tox.ini
+++ b/tox.ini
@@ -63,3 +63,15 @@ deps =
 commands =
     python -m build
     twine check dist/*
+
+[testenv:docs]
+deps =
+    -rrequirements.txt
+    myst-parser
+
+    Sphinx
+    sphinx_rtd_theme
+commands =
+    sphinx-build -W -b html -d {envtmpdir}/doctrees docs {envtmpdir}/html
+    sphinx-build -n -T -W -b doctest -d {envtmpdir}/doctrees docs docs/_build/html
+    python -m doctest README.rst
