➕ Add sphinxcontrib-apidoc to docs environment
sphinx-apidoc is a tool for automatic generation of Sphinx sources that, using the autodoc extension, documents a whole package in the style of other automatic API documentation tools.

--- a/tox.ini
+++ b/tox.ini
@@ -68,6 +68,7 @@ commands =
 deps =
     -rrequirements.txt
     Sphinx
+    sphinxcontrib-apidoc
     sphinx_rtd_theme
 commands =
     sphinx-build -W -b html -d {envtmpdir}/doctrees docs {envtmpdir}/html
