--- a/tox.ini
+++ b/tox.ini
@@ -16,6 +16,8 @@ deps =
     -rrequirements.txt
     pytest
     pytest_mock
+    pytest-datafiles
+    pytest-asyncio
 commands = python -m pytest --basetemp={envtmpdir} {posargs}
 
 [testenv:linting]
