--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -18,7 +18,7 @@ on:
     # The branches below must be a subset of the branches above
     branches: [ main ]
   schedule:
-    - cron: '40 19 * * 2' # run code anaylsis every tuesday at 19:40 (whatever time zone ;))
+    - cron: '40 19 * * 2' # run code analysis every Tuesday at 19:40 (whatever time zone ;))
 
 jobs:
   analyze:
