add typehints to ahbicht/json_serialization

--- a/tox.ini
+++ b/tox.ini
@@ -37,7 +37,8 @@ deps =
     -rrequirements.txt
     mypy
 commands =
-    mypy src/ahbicht
+    mypy src/ahbicht/json_serialization
+    # mypy src/ahbicht  # <-- long term goal
 # add single files (ending with .py) or packages here
 
 [testenv:coverage]
