--- a/tox.ini
+++ b/tox.ini
@@ -37,7 +37,11 @@ deps =
     -rrequirements.txt
     mypy
 commands =
-    mypy src/ahbicht/json_serialization
+    mypy --show-error-codes src/ahbicht/json_serialization
+    # mypy --show-error-codes src/ahbicht/expressions
+    mypy --show-error-codes src/ahbicht/edifact.py
+    mypy --show-error-codes src/ahbicht/condition_node_builder.py
+    mypy --show-error-codes src/ahbicht/condition_check_results.py
     # mypy src/ahbicht  # <-- long term goal
 # add single files (ending with .py) or packages here
 
