--- a/tox.ini
+++ b/tox.ini
@@ -42,6 +42,7 @@ commands =
     mypy --show-error-codes src/ahbicht/edifact.py
     mypy --show-error-codes src/ahbicht/condition_node_builder.py
     mypy --show-error-codes src/ahbicht/condition_check_results.py
+    mypy --show-error-codes src/ahbicht/content_evaluation
     # mypy src/ahbicht  # <-- long term goal
 # add single files (ending with .py) or packages here
 
