--- a/tox.ini
+++ b/tox.ini
@@ -43,6 +43,7 @@ commands =
     mypy --show-error-codes src/ahbicht/condition_node_builder.py
     mypy --show-error-codes src/ahbicht/condition_check_results.py
     mypy --show-error-codes src/ahbicht/content_evaluation
+    mypy --show-error-codes src/ahbicht/expressions
     # mypy src/ahbicht  # <-- long term goal
 # add single files (ending with .py) or packages here
 
