--- a/tox.ini
+++ b/tox.ini
@@ -37,14 +37,7 @@ deps =
     -rrequirements.txt
     mypy
 commands =
-    mypy --show-error-codes src/ahbicht/json_serialization
-    # mypy --show-error-codes src/ahbicht/expressions
-    mypy --show-error-codes src/ahbicht/edifact.py
-    mypy --show-error-codes src/ahbicht/condition_node_builder.py
-    mypy --show-error-codes src/ahbicht/condition_check_results.py
-    mypy --show-error-codes src/ahbicht/content_evaluation
-    mypy --show-error-codes src/ahbicht/expressions
-    # mypy src/ahbicht  # <-- long term goal
+    mypy --show-error-codes src/ahbicht
 # add single files (ending with .py) or packages here
 
 [testenv:coverage]
