--- a/tox.ini
+++ b/tox.ini
@@ -32,7 +32,7 @@ commands =
     # add single files (ending with .py) or packages here
 
 [testenv:type_check]
-# the linting environment is called by the Github Action that runs the static type check (mypy)
+# the type_check environment is called by the Github Action that runs the static type check (mypy)
 deps =
     -rrequirements.txt
     mypy
