Refer to "README.rst" instead of only "README"

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,7 @@ version = 0.0.2
 author = Annika Schlögl
 author_email = annika.schloegl@hochfrequenz.de
 description = Python Library to parse AHB expressions.
-long_description = file: README
+long_description = file: README.rst
 long_description_content_type = text/x-rst; charset=UTF-8
 url = https://github.com/Hochfrequenz/ahbicht
 project_urls =
