--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,9 @@
 [tox]
 envlist =
-     tests
-     linting
-     coverage
+    tests
+    linting
+    type_check
+    coverage
 skip_missing_interpreters = True
 isolated_build = True
 
@@ -25,10 +26,19 @@ commands = python -m pytest --basetemp={envtmpdir} {posargs}
 deps =
     -rrequirements.txt
     pylint
-    # add your fixtures like e.g. pytest_datafiles here
+# add your fixtures like e.g. pytest_datafiles here
 commands =
     pylint src/ahbicht
     # add single files (ending with .py) or packages here
+
+[testenv:type_check]
+# the type_check environment is called by the Github Action that runs the static type check (mypy)
+deps =
+    -rrequirements.txt
+    mypy
+commands =
+    mypy --show-error-codes src/ahbicht
+# add single files (ending with .py) or packages here
 
 [testenv:coverage]
 # the coverage environment is called by the Github Action that runs the coverage measurement
@@ -46,6 +56,7 @@ commands =
 deps =
     {[testenv:tests]deps}
     {[testenv:linting]deps}
+    {[testenv:type_check]deps}
     {[testenv:coverage]deps}
     black
     isort
