add rst test to tox

--- a/tox.ini
+++ b/tox.ini
@@ -58,6 +58,7 @@ deps =
     {[testenv:linting]deps}
     {[testenv:type_check]deps}
     {[testenv:coverage]deps}
+    {[testenv:test_readme]deps}
     black
     isort
     pip-tools
@@ -76,6 +77,13 @@ deps =
 commands =
     python -m build
     twine check dist/*
+
+[testenv:test_readme]
+skip_install = true
+deps =
+    rstcheck
+commands =
+    rstcheck README.rst
 
 [testenv:docs]
 deps =
