is the package name the problem?

--- a/setup.cfg
+++ b/setup.cfg
@@ -23,7 +23,7 @@ platforms = any
 [options]
 package_dir =
     = src
-packages = find:
+packages = ahbicht
 zip_safe = False
 include_package_data = True
 python_requires = >=3.8
