--- a/setup.cfg
+++ b/setup.cfg
@@ -23,7 +23,7 @@ platforms = any
 [options]
 package_dir =
     = src
-packages = ahbicht
+packages = find:
 zip_safe = False
 include_package_data = True
 python_requires = >=3.8
@@ -40,4 +40,4 @@ exclude =
     unittests
 
 [options.package_data]
-ahbicht = py.typed
+* = py.typed
