--- a/tox.ini
+++ b/tox.ini
@@ -38,6 +38,7 @@ deps =
     mypy
 commands =
     mypy --show-error-codes src/ahbicht
+    mypy --show-error-codes unittests
 # add single files (ending with .py) or packages here
 
 [testenv:coverage]
