--- a/tox.ini
+++ b/tox.ini
@@ -4,6 +4,7 @@ envlist =
     linting
     type_check
     coverage
+    json_schemas
 skip_missing_interpreters = True
 isolated_build = True
 
@@ -29,7 +30,8 @@ deps =
 # add your fixtures like e.g. pytest_datafiles here
 commands =
     pylint src/ahbicht
-    # add single files (ending with .py) or packages here
+    pylint json_schemas/generate_json_schemas.py
+# add single files (ending with .py) or packages here
 
 [testenv:type_check]
 # the type_check environment is called by the Github Action that runs the static type check (mypy)
@@ -39,6 +41,7 @@ deps =
 commands =
     mypy --show-error-codes src/ahbicht
     mypy --show-error-codes unittests
+    mypy --show-error-codes json_schemas/generate_json_schemas.py
 # add single files (ending with .py) or packages here
 
 [testenv:coverage]
@@ -59,6 +62,7 @@ deps =
     {[testenv:linting]deps}
     {[testenv:type_check]deps}
     {[testenv:coverage]deps}
+    {[testenv:json_schemas]deps}
     black
     isort
     pip-tools
@@ -87,3 +91,12 @@ commands =
     sphinx-build -W -b html -d {envtmpdir}/doctrees docs {envtmpdir}/html
     sphinx-build -n -T -W -b doctest -d {envtmpdir}/doctrees docs docs/_build/html
     python -m doctest README.rst
+
+[testenv:json_schemas]
+usedevelop = True
+deps =
+    -rrequirements.txt
+    marshmallow_jsonschema
+commands =
+    cd json_schemas
+    python generate_json_schemas.py
