pdate tox.ini again

--- a/tox.ini
+++ b/tox.ini
@@ -25,6 +25,7 @@ commands = python -m pytest --basetemp={envtmpdir} {posargs}
 [testenv:linting]
 # the linting environment is called by the Github Action that runs the linter
 deps =
+    {[testenv:json_schemas]deps}
     -rrequirements.txt
     pylint
 # add your fixtures like e.g. pytest_datafiles here
@@ -36,6 +37,7 @@ commands =
 [testenv:type_check]
 # the type_check environment is called by the Github Action that runs the static type check (mypy)
 deps =
+    {[testenv:json_schemas]deps}
     -rrequirements.txt
     mypy
 commands =
