--- a/tox.ini
+++ b/tox.ini
@@ -100,5 +100,4 @@ deps =
     -rrequirements.txt
     marshmallow_jsonschema
 commands =
-    cd json_schemas
-    python generate_json_schemas.py
+    python json_schemas/generate_json_schemas.py
