add black[jupyter] and nest_asyncio to dev requirements

--- a/tox.ini
+++ b/tox.ini
@@ -66,6 +66,8 @@ deps =
     {[testenv:coverage]deps}
     {[testenv:json_schemas]deps}
     black
+    black[jupyter]
+    nest_asyncio
     isort
     pip-tools
     pre-commit
