--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,9 @@
 #    pip-compile requirements.in
 #
 attrs==21.4.0
-    # via -r requirements.in
+    # via
+    #   -r requirements.in
+    #   maus
 inject==4.3.1
     # via -r requirements.in
 lark==1.1.1
@@ -14,5 +16,8 @@ marshmallow==3.14.1
     # via
     #   -r requirements.in
     #   marshmallow-enum
+    #   maus
 marshmallow-enum==1.5.1
+    # via -r requirements.in
+maus==0.0.10
     # via -r requirements.in
