--- a/requirements.txt
+++ b/requirements.txt
@@ -21,3 +21,5 @@ marshmallow-enum==1.5.1
     # via -r requirements.in
 maus==0.0.10
     # via -r requirements.in
+pytz==2021.3
+    # via -r requirements.in
