ignore remaining mypy warning

--- a/tox.ini
+++ b/tox.ini
@@ -39,6 +39,7 @@ commands =
 deps =
     {[testenv:json_schemas]deps}
     -rrequirements.txt
+    types-pytz
     mypy
 commands =
     mypy --show-error-codes src/ahbicht
