--- a/tox.ini
+++ b/tox.ini
@@ -19,6 +19,7 @@ deps =
     pytest
     pytest_mock
     pytest-asyncio
+    aioresponses
     pytest-datafiles
 commands = python -m pytest --basetemp={envtmpdir} {posargs}
 
