--- a/requirements.txt
+++ b/requirements.txt
@@ -4,10 +4,25 @@
 #
 #    pip-compile requirements.in
 #
+aiohttp==3.8.1
+    # via -r requirements.in
+aiosignal==1.2.0
+    # via aiohttp
+async-timeout==4.0.2
+    # via aiohttp
 attrs==21.4.0
     # via
     #   -r requirements.in
+    #   aiohttp
     #   maus
+charset-normalizer==2.0.12
+    # via aiohttp
+frozenlist==1.3.0
+    # via
+    #   aiohttp
+    #   aiosignal
+idna==3.3
+    # via yarl
 inject==4.3.1
     # via -r requirements.in
 lark==1.1.1
@@ -21,3 +36,9 @@ marshmallow-enum==1.5.1
     # via -r requirements.in
 maus==0.0.10
     # via -r requirements.in
+multidict==6.0.2
+    # via
+    #   aiohttp
+    #   yarl
+yarl==1.7.2
+    # via aiohttp
