fix broken type_check setup

--- a/tox.ini
+++ b/tox.ini
@@ -38,6 +38,7 @@ commands =
 [testenv:type_check]
 # the type_check environment is called by the Github Action that runs the static type check (mypy)
 deps =
+    {[testenv:tests]deps}
     {[testenv:json_schemas]deps}
     -rrequirements.txt
     mypy
