--- a/.github/workflows/typescript_from_json_schemas.yml
+++ b/.github/workflows/typescript_from_json_schemas.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Push ts_models content to type script models repo
         uses: cpina/github-action-push-to-another-repository@v1.4.1
         env:
-          API_TOKEN_GITHUB: ${{ secrets.API_TOKEN_GITHUB }}
+          API_TOKEN_GITHUB: ${{ secrets.TS_MODELS_PUSH_TOKEN }}
         with:
           source-directory: 'ts_models'
           target-directory: 'src'
