✨ Implement Zeitbedingungen UB1, UB2, UB3 (#127)
Co-authored-by: Annika <73470827+hf-aschloegl@users.noreply.github.com>
Co-authored-by: Annika Schlögl <annika.schloegl@hochfrequenz.de>

--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,8 @@ marshmallow-enum==1.5.1
     # via -r requirements.in
 maus==0.1.1
     # via -r requirements.in
+pytz==2021.3
+    # via -r requirements.in
 packaging==21.3
     # via marshmallow
 pyparsing==3.0.7
