--- a/.github/workflows/typescript_from_json_schemas.yml
+++ b/.github/workflows/typescript_from_json_schemas.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Push ts_models content to type script models repo
         uses: cpina/github-action-push-to-another-repository@v1.4.1
         env:
-          API_TOKEN_GITHUB: ${{ secrets.TS_MODELS_PUSH_TOKEN }}
+          API_TOKEN_GITHUB: ${{ secrets.TS_MODELS_PUSH_TOKEN }} # this token expires on 2023-05-01
         with:
           source-directory: "ts_models"
           target-directory: "src"
