--- a/requirements.txt
+++ b/requirements.txt
@@ -20,9 +20,7 @@ marshmallow==3.18.0
     #   marshmallow-enum
     #   maus
 marshmallow-enum==1.5.1
-    # via
-    #   -r requirements.in
-    #   maus
+    # via maus
 maus==0.1.18
     # via -r requirements.in
 packaging==21.3
