Set maus 0.1.24 as min version
 (because it supports 3.11)

--- a/requirements.in
+++ b/requirements.in
@@ -3,6 +3,6 @@ lark>=1.1.4
 inject
 marshmallow
 marshmallow_enum
-maus
+maus>=0.1.24
 pytz
 # whenever adding something here, don't forget to also add it to setup.cfg
