--- a/.github/workflows/black.yml
+++ b/.github/workflows/black.yml
@@ -1,4 +1,4 @@
-name: "Black"
+name: "Formatting"
 
 on: [push]
 jobs:
@@ -8,9 +8,17 @@ jobs:
       matrix:
         python-version: ["3.11"]
         os: [ubuntu-latest]
+        tool: ["black", "isort"]
     steps:
       - uses: actions/checkout@v3
-      - name: Black Code Formatter
-        uses: lgeiger/black-action@v1.0.1
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v4
         with:
-          args: ". --check"
+          python-version: ${{ matrix.python-version }}
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r dev_requirements/requirements-formatting.txt
+      - name: ${{ matrix.tool }} Code Formatter
+        run: |
+          ${{ matrix.tool }} . --check
