--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -43,7 +43,8 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install setuptools setuptools-scm wheel twine
+          pip install tox
+          tox -e test_packaging
       - name: Build a binary wheel and a source tarball
         run: |
           python setup.py sdist bdist_wheel
