--- a/tox.ini
+++ b/tox.ini
@@ -56,6 +56,13 @@ commands =
     coverage html --omit .tox/*,unittests/*
     coverage report --fail-under 95 --omit .tox/*,unittests/*
 
+[testenv:formatting]
+deps =
+    -r dev_requirements/requirements-formatting.txt
+commands =
+    black . --check
+    isort . --check
+
 [testenv:dev]
 # the dev environment contains everything you need to start developing on your local machine.
 deps =
@@ -64,7 +71,7 @@ deps =
     {[testenv:type_check]deps}
     {[testenv:coverage]deps}
     {[testenv:json_schemas]deps}
-    -r dev_requirements/requirements-formatting.txt
+    {[testenv:formatting]deps}
     nest_asyncio
     pip-tools
     pre-commit
