aha, ein weiteres ignore

--- a/tox.ini
+++ b/tox.ini
@@ -32,6 +32,7 @@ commands =
 # add single files (ending with .py) or packages here
 
 [testenv:type_check]
+usedevelop=True
 # the type_check environment is called by the Github Action that runs the static type check (mypy)
 # because we type-check the tests it's good to install e.g. pytest in the type_check env
 deps =
