--- a/tox.ini
+++ b/tox.ini
@@ -15,11 +15,8 @@ commands = python -m pip install --upgrade pip
 # the tests environment is called by the Github action that runs the unit tests
 usedevelop = True
 deps =
-    -rrequirements.txt
-    pytest
-    pytest_mock
-    pytest-asyncio
-    pytest-datafiles
+    -r requirements.txt
+    -r dev_requirements/requirements-tests.txt
 commands = python -m pytest --basetemp={envtmpdir} {posargs}
 
 [testenv:linting]
@@ -27,7 +24,7 @@ commands = python -m pytest --basetemp={envtmpdir} {posargs}
 deps =
     {[testenv:json_schemas]deps}
     -rrequirements.txt
-    pylint
+    -r dev_requirements/requirements-linting.txt
 # add your fixtures like e.g. pytest_datafiles here
 commands =
     pylint src/ahbicht
@@ -35,12 +32,14 @@ commands =
 # add single files (ending with .py) or packages here
 
 [testenv:type_check]
+usedevelop=True
 # the type_check environment is called by the Github Action that runs the static type check (mypy)
+# because we type-check the tests it's good to install e.g. pytest in the type_check env
 deps =
     {[testenv:json_schemas]deps}
-    -rrequirements.txt
-    types-pytz
-    mypy
+    {[testenv:tests]deps}
+    -r requirements.txt
+    -r dev_requirements/requirements-type_check.txt
 commands =
     mypy --show-error-codes src/ahbicht
     mypy --show-error-codes unittests
@@ -52,11 +51,18 @@ commands =
 usedevelop = True
 deps =
     {[testenv:tests]deps}
-    coverage
+    -r dev_requirements/requirements-coverage.txt
 commands =
     coverage run -m pytest --basetemp={envtmpdir} {posargs}
     coverage html --omit .tox/*,unittests/*
     coverage report --fail-under 95 --omit .tox/*,unittests/*
+
+[testenv:formatting]
+deps =
+    -r dev_requirements/requirements-formatting.txt
+commands =
+    black . --check
+    isort . --check
 
 [testenv:dev]
 # the dev environment contains everything you need to start developing on your local machine.
@@ -66,10 +72,8 @@ deps =
     {[testenv:type_check]deps}
     {[testenv:coverage]deps}
     {[testenv:json_schemas]deps}
-    black
-    black[jupyter]
+    {[testenv:formatting]deps}
     nest_asyncio
-    isort
     pip-tools
     pre-commit
 commands =
@@ -81,17 +85,15 @@ commands =
 [testenv:test_packaging]
 skip_install = true
 deps =
-    build
-    twine
+    -r dev_requirements/requirements-test_packaging.txt
 commands =
     python -m build
     twine check dist/*
 
 [testenv:docs]
 deps =
-    -rrequirements.txt
-    Sphinx
-    sphinx_rtd_theme
+    -r requirements.txt
+    -r dev_requirements/requirements-docs.txt
 commands =
     sphinx-build -W -b html -d {envtmpdir}/doctrees docs {envtmpdir}/html
     sphinx-build -n -T -W -b doctest -d {envtmpdir}/doctrees docs docs/_build/html
@@ -100,7 +102,7 @@ commands =
 [testenv:json_schemas]
 usedevelop = True
 deps =
-    -rrequirements.txt
-    marshmallow_jsonschema
+    -r requirements.txt
+    -r dev_requirements/requirements-json_schemas.txt
 commands =
     python json_schemas/generate_json_schemas.py
