--- a/setup.cfg
+++ b/setup.cfg
@@ -31,7 +31,7 @@ install_requires =
     inject
     marshmallow
     marshmallow_enum
-    maus>=0.3.1a
+    maus>=0.3.42
     pytz
 
 [options.packages.find]
