--- a/tox.ini
+++ b/tox.ini
@@ -42,6 +42,7 @@ deps =
     -r dev_requirements/requirements-type_check.txt
 commands =
     mypy --show-error-codes src/ahbicht
+    # mypy --show-error-codes src/ahbicht --strict
     mypy --show-error-codes unittests
     mypy --show-error-codes json_schemas/generate_json_schemas.py
 # add single files (ending with .py) or packages here
