--- a/setup.cfg
+++ b/setup.cfg
@@ -35,8 +35,9 @@ install_requires =
     inject
     marshmallow
     marshmallow_enum
-    maus>=0.3.43
+    maus>=0.6.0
     pytz
+    efoli>=1.1.0
 
 [options.packages.find]
 where = src
