--- a/tox.ini
+++ b/tox.ini
@@ -17,7 +17,7 @@ commands = python -m pip install --upgrade pip
 usedevelop = True
 deps =
     -r requirements.txt
-    .[test]
+    .[tests]
 commands = python -m pytest --basetemp={envtmpdir} {posargs}
 
 [testenv:linting]
