add docs environment dependencies into dev environment

--- a/tox.ini
+++ b/tox.ini
@@ -73,6 +73,7 @@ deps =
     {[testenv:coverage]deps}
     {[testenv:json_schemas]deps}
     {[testenv:formatting]deps}
+    {[testenv:docs]deps}
     nest_asyncio
     pip-tools
     pre-commit
