--- a/tox.ini
+++ b/tox.ini
@@ -5,6 +5,7 @@ envlist =
     type_check
     coverage
     json_schemas
+    spellcheck
 skip_missing_interpreters = True
 isolated_build = True
 
@@ -16,7 +17,7 @@ commands = python -m pip install --upgrade pip
 usedevelop = True
 deps =
     -r requirements.txt
-    -r dev_requirements/requirements-tests.txt
+    .[tests]
 commands = python -m pytest --basetemp={envtmpdir} {posargs}
 
 [testenv:linting]
@@ -24,7 +25,7 @@ commands = python -m pytest --basetemp={envtmpdir} {posargs}
 deps =
     {[testenv:json_schemas]deps}
     -rrequirements.txt
-    -r dev_requirements/requirements-linting.txt
+    .[linting]
 # add your fixtures like e.g. pytest_datafiles here
 commands =
     pylint src/ahbicht
@@ -39,7 +40,7 @@ deps =
     {[testenv:json_schemas]deps}
     {[testenv:tests]deps}
     -r requirements.txt
-    -r dev_requirements/requirements-type_check.txt
+    .[type_check]
 commands =
     mypy --show-error-codes src/ahbicht
     mypy --show-error-codes unittests
@@ -51,7 +52,7 @@ commands =
 usedevelop = True
 deps =
     {[testenv:tests]deps}
-    -r dev_requirements/requirements-coverage.txt
+    .[coverage]
 commands =
     coverage run -m pytest --basetemp={envtmpdir} {posargs}
     coverage html --omit .tox/*,unittests/*
@@ -59,10 +60,20 @@ commands =
 
 [testenv:formatting]
 deps =
-    -r dev_requirements/requirements-formatting.txt
+    .[formatting]
 commands =
     black . --check
     isort . --check
+
+[testenv:spellcheck]
+# the spellcheck environment checks the code for typos
+setenv = PYTHONPATH = {toxinidir}/src
+deps =
+    {[testenv:tests]deps}
+    .[spellcheck]
+commands =
+    codespell --ignore-words=domain-specific-terms.txt --skip .\docs\_static\ahbicht-logo-raw.svg
+    # add single files (ending with .py) or packages here
 
 [testenv:dev]
 # the dev environment contains everything you need to start developing on your local machine.
@@ -75,18 +86,16 @@ deps =
     {[testenv:formatting]deps}
     {[testenv:docs]deps}
     nest_asyncio
-    pip-tools
     pre-commit
 commands =
     python -m pip install --upgrade pip
-    pip-compile requirements.in
     pip install -r requirements.txt
     pre-commit install
 
 [testenv:test_packaging]
 skip_install = true
 deps =
-    -r dev_requirements/requirements-test_packaging.txt
+    .[test_packaging]
 commands =
     python -m build
     twine check dist/*
@@ -104,6 +113,6 @@ commands =
 usedevelop = True
 deps =
     -r requirements.txt
-    -r dev_requirements/requirements-json_schemas.txt
+    .[json_schemas]
 commands =
     python json_schemas/generate_json_schemas.py
