--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -27,4 +27,4 @@ sphinx:
 # Optionally declare the Python requirements required to build your docs
 python:
   install:
-    - requirements: requirements.txt
+    - requirements: dev_requirements/requirements-docs.txt
