--- a/tox.ini
+++ b/tox.ini
@@ -72,7 +72,7 @@ deps =
     {[testenv:tests]deps}
     .[spellcheck]
 commands =
-    codespell --ignore-words=domain-specific-terms.txt --skip .\docs\_static\ahbicht-logo-raw.svg
+    codespell --ignore-words=domain-specific-terms.txt --skip "./docs/_static/ahbicht-logo-raw.svg, ./htmlcov, ./docs"
     # add single files (ending with .py) or packages here
 
 [testenv:dev]
