add setuptools to json_schemas to fix error
Traceback (most recent call last):
  File "/Users/kevin/workspaces/hochfrequenz/ahbicht/json_schemas/generate_json_schemas.py", line 11, in <module>
    from marshmallow_jsonschema import JSONSchema  # type:ignore[import]
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/kevin/workspaces/hochfrequenz/ahbicht/.tox/json_schemas/lib/python3.12/site-packages/marshmallow_jsonschema/__init__.py", line 1, in <module>
    from pkg_resources import get_distribution
ModuleNotFoundError: No module named 'pkg_resources'

--- a/tox.ini
+++ b/tox.ini
@@ -114,5 +114,6 @@ usedevelop = True
 deps =
     -r requirements.txt
     .[json_schemas]
+    setuptools
 commands =
     python json_schemas/generate_json_schemas.py
