add new env to compile docs dependencies

--- a/tox.ini
+++ b/tox.ini
@@ -116,3 +116,9 @@ deps =
     .[json_schemas]
 commands =
     python json_schemas/generate_json_schemas.py
+
+[testenv:update_docs_requirements]
+deps =
+    pip-tools
+commands =
+    pip-compile --upgrade --extra=docs --output-file=dev_requirements/requirements-docs.txt pyproject.toml
