--- a/dev_requirements/requirements-docs.txt
+++ b/dev_requirements/requirements-docs.txt
@@ -6,7 +6,7 @@
 #
 alabaster==0.7.16
     # via sphinx
-attrs==24.3.0
+attrs==25.3.0
     # via
     #   ahbicht (pyproject.toml)
     #   maus
@@ -16,6 +16,8 @@ certifi==2024.8.30
     # via requests
 charset-normalizer==3.3.2
     # via requests
+colorama==0.4.6
+    # via sphinx
 docutils==0.20.1
     # via
     #   sphinx
@@ -36,7 +38,7 @@ lark==1.2.2
     # via ahbicht (pyproject.toml)
 markupsafe==2.1.5
     # via jinja2
-marshmallow==3.25.1
+marshmallow==3.26.1
     # via
     #   ahbicht (pyproject.toml)
     #   marshmallow-enum
@@ -53,7 +55,7 @@ packaging==24.1
     #   sphinx
 pygments==2.18.0
     # via sphinx
-pytz==2024.2
+pytz==2025.1
     # via
     #   ahbicht (pyproject.toml)
     #   efoli
@@ -61,12 +63,12 @@ requests==2.32.3
     # via sphinx
 snowballstemmer==2.2.0
     # via sphinx
-sphinx==7.4.7
+sphinx==8.1.3
     # via
     #   ahbicht (pyproject.toml)
     #   sphinx-rtd-theme
     #   sphinxcontrib-jquery
-sphinx-rtd-theme==2.0.0
+sphinx-rtd-theme==3.0.2
     # via ahbicht (pyproject.toml)
 sphinxcontrib-applehelp==2.0.0
     # via sphinx
