--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ dependencies = [
     "marshmallow_enum",
     "pytz",
     "efoli>=1.4.0",
+    "pydantic>=2"
 ] # add all the dependencies here
 dynamic = ["readme", "version"]
 
@@ -52,7 +53,7 @@ tests = [
     "pytest-datafiles==3.0.0",
     "pytest-mock==3.14.0",
 ]
-type_check = ["mypy==1.15.0", "types-pytz==2025.2.0.20250326"]
+type_check = ["mypy[pydantic]==1.15.0", "types-pytz==2025.2.0.20250326"]
 dev = ["pip-tools"]
 
 [tool.setuptools.dynamic]
