--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@
 #
 #    pip-compile pyproject.toml
 #
+annotated-types==0.7.0
+    # via pydantic
 attrs==25.3.0
     # via ahbicht (pyproject.toml)
 efoli==2.0.0
@@ -20,7 +22,18 @@ marshmallow-enum==1.5.1
     # via ahbicht (pyproject.toml)
 packaging==25.0
     # via marshmallow
+pydantic==2.11.4
+    # via ahbicht (pyproject.toml)
+pydantic-core==2.33.2
+    # via pydantic
 pytz==2025.2
     # via
     #   ahbicht (pyproject.toml)
     #   efoli
+typing-extensions==4.13.2
+    # via
+    #   pydantic
+    #   pydantic-core
+    #   typing-inspection
+typing-inspection==0.4.0
+    # via pydantic
