--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -14,17 +14,13 @@ on:
 jobs:
    tests:
      if: startsWith(github.ref, 'refs/tags/v')
-     runs-on: ${{ matrix.os }}
-     strategy:
-       matrix:
-         python-version: ["3.13"]
-         os: [ubuntu-latest]
+     runs-on: ubuntu-latest
      steps:
        - uses: actions/checkout@v5
-       - name: Set up Python ${{ matrix.python-version }}
+       - name: Set up Python
          uses: actions/setup-python@v6
          with:
-           python-version: ${{ matrix.python-version }}
+           python-version: 3.14
        - name: Install tox
          run: |
            python -m pip install --upgrade pip
@@ -48,7 +44,7 @@ jobs:
        - name: Set up Python
          uses: actions/setup-python@v6
          with:
-           python-version: ${{ matrix.python-version }}
+           python-version: 3.14
        - name: Install dependencies
          run: |
            python -m pip install --upgrade pip
