--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,5 +1,8 @@
 name: "Test Doc Creation (Sphinx)"
-on: [push]
+on:
+  push:
+    branches: [main]
+  pull_request: {}
 jobs:
   docbuild:
     name: Check Docs
