--- a/.github/workflows/json_schemas.yml
+++ b/.github/workflows/json_schemas.yml
@@ -1,5 +1,8 @@
 name: "Test JSON Schema Creation"
-on: [push]
+on:
+  push:
+    branches: [main]
+  pull_request: {}
 jobs:
   docbuild:
     name: Check JSON Schema Creation
