--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,7 +36,7 @@ dynamic = ["readme", "version"]
 coverage = ["coverage==7.10.7"]
 docs = ["sphinx==8.1.3", "sphinx-rtd-theme==3.0.2"]
 formatting = ["black[jupyter]==25.9.0", "isort==6.1.0"]
-json_schemas = ["setuptools==80.9.0"] # why are setuptools still there?
+json_schemas = []
 linting = ["pylint==3.3.9"]
 spellcheck = ["codespell==2.4.1"]
 test_packaging = [
