--- a/dev_requirements/requirements-docs.txt
+++ b/dev_requirements/requirements-docs.txt
@@ -4,12 +4,10 @@
 #
 #    pip-compile --extra=docs --output-file=dev_requirements/requirements-docs.txt pyproject.toml
 #
-alabaster==0.7.16
+alabaster==1.0.0
     # via sphinx
-attrs==25.4.0
-    # via
-    #   ahbicht (pyproject.toml)
-    #   maus
+annotated-types==0.7.0
+    # via pydantic
 babel==2.17.0
     # via sphinx
 certifi==2025.10.5
@@ -23,9 +21,7 @@ docutils==0.21.2
     #   sphinx
     #   sphinx-rtd-theme
 efoli==2.1.1
-    # via
-    #   ahbicht (pyproject.toml)
-    #   maus
+    # via ahbicht (pyproject.toml)
 idna==3.11
     # via requests
 imagesize==1.4.1
@@ -38,21 +34,12 @@ lark==1.3.1
     # via ahbicht (pyproject.toml)
 markupsafe==3.0.3
     # via jinja2
-marshmallow==3.26.1
-    # via
-    #   ahbicht (pyproject.toml)
-    #   marshmallow-enum
-    #   maus
-marshmallow-enum==1.5.1
-    # via ahbicht (pyproject.toml)
-maus==0.6.1
-    # via ahbicht (pyproject.toml)
-more-itertools==10.8.0
-    # via maus
 packaging==25.0
-    # via
-    #   marshmallow
-    #   sphinx
+    # via sphinx
+pydantic==2.12.4
+    # via ahbicht (pyproject.toml)
+pydantic-core==2.41.5
+    # via pydantic
 pygments==2.19.2
     # via sphinx
 pytz==2025.2
@@ -84,5 +71,12 @@ sphinxcontrib-qthelp==2.0.0
     # via sphinx
 sphinxcontrib-serializinghtml==2.0.0
     # via sphinx
+typing-extensions==4.15.0
+    # via
+    #   pydantic
+    #   pydantic-core
+    #   typing-inspection
+typing-inspection==0.4.2
+    # via pydantic
 urllib3==2.5.0
     # via requests
